--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .schedule-section { margin: 36px 0 36px 0; }
     .schedule-title { text-align: center; font-size: 1.4em; color: #16405b; font-weight: 600; letter-spacing: 1.1px; margin-bottom: 18px;}
     .schedule-frame { display: flex; justify-content: center; }
-    .schedule-frame iframe { width: 98%; min-width: 340px; max-width: 1000px; height: 410px; border-radius: 10px; box-shadow: 0 1px 8px #0001;}
+    .schedule-frame iframe { width: 98%; min-width: 340px; max-width: 1000px; height: 900px; border-radius: 10px; box-shadow: 0 1px 8px #0001;}
     .cta-section { display: flex; justify-content: center; margin: 0 0 42px 0; }
     .cta { background: #f3f7fa; border-radius: 10px; box-shadow: 0 1px 8px #0001; padding: 28px 32px; max-width: 410px; width: 100%;}
     .cta h2 { margin: 0 0 14px 0; font-size: 1.28em; color: #16405b; letter-spacing: 1.1px; }
@@ -58,6 +58,7 @@
       .gallery-images img, .instructor img { width: 96%; max-width: 270px; height: auto;}
       .bottom-badges { flex-direction: column; gap: 14px; align-items: center; text-align: center;}
       .maps-images img { width: 98%;}
+      .schedule-frame iframe { height: 500px; }
     }
   </style>
 </head>
