--- a/index.html
+++ b/index.html
@@ -458,22 +458,23 @@
     </div>
 
     <!-- Awards -->
-    <div class="awards-section">
-      <h2>Academy Awards</h2>
-      <div class="awards-logos">
-        <img src="academy~~element1146~~14.jpg" alt="Award" />
-        <img src="academy~~element1146~~15.jpg" alt="Award" />
-        <img src="academy~~element1146~~16.jpg" alt="Award" />
-        <img src="academy~~element1146~~17.jpg" alt="Award" />
-        <img src="academy~~element1146~~18.jpg" alt="Award" />
-        <img src="academy~~element1146~~19.jpg" alt="Award" />
-        <img src="academy~~element1146~~20.jpg" alt="Award" />
-        <img src="academy~~element1146~~21.jpg" alt="Award" />
-        <img src="academy~~element1146~~22.jpg" alt="Award" />
-        <img src="academy~~element1146~~23.jpg" alt="Award" />
-        <img src="academy~~element1146~~24.jpg" alt="Award" />
-      </div>
-    </div>
+<div class="awards-section">
+  <h2>Academy Awards</h2>
+  <div class="awards-logos">
+    <img src="BEST OF TACOMA 2012.jpg" alt="Best of Tacoma 2012 Award">
+    <img src="BEST OF TACOMA 2013.jpg" alt="Best of Tacoma 2013 Award">
+    <img src="BEST OF TACOMA 2014.jpg" alt="Best of Tacoma 2014 Award">
+    <img src="BEST OF TACOMA 2015.jpg" alt="Best of Tacoma 2015 Award">
+    <img src="BEST OF TACOMA 2016.jpg" alt="Best of Tacoma 2016 Award">
+    <img src="BEST OF TACOMA 2017.jpg" alt="Best of Tacoma 2017 Award">
+    <img src="BEST OF TACOMA 2018.jpg" alt="Best of Tacoma 2018 Award">
+    <img src="BEST OF TACOMA 2019.jpg" alt="Best of Tacoma 2019 Award">
+    <img src="BEST OF TACOMA 2020 EXCELLENCE AWARD.jpg" alt="Best of Tacoma 2020 Excellence Award">
+    <img src="BEST OF TACOMA 2022.jpg" alt="Best of Tacoma 2022 Award">
+    <img src="BEST OF TACOMA 2023.jpg" alt="Best of Tacoma 2023 Award">
+  </div>
+</div>
+
 
     <!-- Code of Conduct -->
     <div class="conduct-section">
